# webgazer-dataset-reader

./: Cargo.toml  README.md
examples/: print_participants.rs  print_webcam_videos_paths.rs
src/: dataset_path.rs  dataset_reader.rs  lib.rs  participant_characteristics.rs  participant_path.rs  participant_reader.rs  webcam_videos_type.rs
