[package]
name = "webgazer-dataset-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
serde_repr = "0.1.9"
chrono = "0.4.22"
regex = "1.6.0"

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }
